[package]
name = "meshping"
version = "0.1.0"
edition = "2021"
description = "A cross-platform network diagnostic toolkit"
license = "MIT"
repository = "https://github.com/calvinms2130/meshping"
keywords = ["network", "ping", "scanner", "cli", "diagnostic"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
ipnetwork = "0.20"
hickory-resolver = "0.24"
console = "0.15"
comfy-table = "7"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
